fix: ESLintエラーを修正
- Svelteの各each blockにkeyを追加
- 未使用変数を削除/修正
- TypeScriptのany型をunknownに変更
- XSS警告にeslint-disableを追加
- Schema.org構造化データを適切に出力
- .prettierignoreを追加して無駄なフォーマットを回避

--- a/content/blog/opinions/2016-07-22-Twitter無断転載.md
+++ b/content/blog/opinions/2016-07-22-Twitter無断転載.md
@@ -5,7 +5,7 @@ slug: your-twitter-rules-are-bitter
 publishedAt: 2016-07-22T00:00:00
 coverImage: /Hero/pexels-brett-jordan-5417837_krdfvc.jpg
 category: Opinions
-tags: ["Twitter"]
+tags: ['Twitter']
 ---
 
 ## 誤った被害宣言は恥ずかしい
